--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -29,3 +29,4 @@ jobs:
       - name: run all files
         run: |
           for file in docs/*; do python3 docsum.py ${file}; done
+          python3 -m doctest docsum.py
