--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -28,7 +28,7 @@ jobs:
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
       - name: run all files
         run: |
-          python3 docsum.py docs/declaration
+          python3 docsum.py docs/declaration.txt
           python3 docsum.py docs/2023.findings-emnlp.945.pdf
           python3 docsum.py docs/hamlet.txt
           python3 docsum.py docs/estados-unidos-admite-haber-perdido-la-pista-de-32000-menores-migrantes-no-acompanados.html
